traceback.txt
I'm sorry, but an uncaught exception occurred.

While running game code:
  File "renpy/style.pyx", line 808, in renpy.style.rebuild
  File "game/screens.rpy", line 283, in prepare_screen
    screen navigation():
  File "game/screens.rpy", line 283, in prepare
    screen navigation():
  File "game/screens.rpy", line 285, in prepare
    vbox:
  File "game/screens.rpy", line 285, in prepare
    vbox:
  File "game/screens.rpy", line 297, in prepare
    if main_menu:
  File "game/screens.rpy", line 297, in prepare
    if main_menu:
  File "game/screens.rpy", line 299, in prepare
    imagebutton auto "gui/button/novo_jogo_%s.png" action Start()  xalign 0.5 yalign 0.5 ypos 25-
  File "game/screens.rpy", line 299, in prepare
    imagebutton auto "gui/button/novo_jogo_%s.png" action Start()  xalign 0.5 yalign 0.5 ypos 25-
  File "game/screens.rpy", line 299
    25-
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "game/screens.rpy", line 283, in prepare_screen
    screen navigation():
  File "game/screens.rpy", line 283, in prepare
    screen navigation():
  File "game/screens.rpy", line 285, in prepare
    vbox:
  File "game/screens.rpy", line 285, in prepare
    vbox:
  File "game/screens.rpy", line 297, in prepare
    if main_menu:
  File "game/screens.rpy", line 297, in prepare
    if main_menu:
  File "game/screens.rpy", line 299, in prepare
    imagebutton auto "gui/button/novo_jogo_%s.png" action Start()  xalign 0.5 yalign 0.5 ypos 25-
  File "game/screens.rpy", line 299, in prepare
    imagebutton auto "gui/button/novo_jogo_%s.png" action Start()  xalign 0.5 yalign 0.5 ypos 25-
  File "game/screens.rpy", line 299
    25-
SyntaxError: invalid syntax

-- Full Traceback ------------------------------------------------------------

Traceback (most recent call last):
  File "renpy/common/00start.rpy", line 201, in script
    python:
  File "renpy/ast.py", line 1187, in execute
    renpy.python.py_exec_bytecode(self.code.bytecode, self.hide, store=self.store)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/python.py", line 1260, in py_exec_bytecode
    exec(bytecode, globals, locals)
    ~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/common/00start.rpy", line 202, in <module>
    _init_language()
    ~~~~~~~~~~~~~~^^
  File "renpy/common/00start.rpy", line 83, in _init_language
    renpy.change_language(language, force=True)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/translation/__init__.py", line 841, in change_language
    renpy.style.rebuild()
    ~~~~~~~~~~~~~~~~~~~^^
  File "renpy/style.pyx", line 808, in renpy.style.rebuild
  File "renpy/display/screen.py", line 1035, in prepare_screens
    s.ast.prepare_screen()
    ~~~~~~~~~~~~~~~~~~~~^^
  File "game/screens.rpy", line 283, in prepare_screen
    screen navigation():
  File "game/screens.rpy", line 283, in prepare
    screen navigation():
  File "game/screens.rpy", line 285, in prepare
    vbox:
  File "game/screens.rpy", line 285, in prepare
    vbox:
  File "game/screens.rpy", line 297, in prepare
    if main_menu:
  File "game/screens.rpy", line 297, in prepare
    if main_menu:
  File "game/screens.rpy", line 299, in prepare
    imagebutton auto "gui/button/novo_jogo_%s.png" action Start()  xalign 0.5 yalign 0.5 ypos 25-
  File "game/screens.rpy", line 299, in prepare
    imagebutton auto "gui/button/novo_jogo_%s.png" action Start()  xalign 0.5 yalign 0.5 ypos 25-
  File "renpy/pyanalysis.py", line 913, in ast_eval
    return self.ast_eval_literal(expr)[0]
           ~~~~~~~~~~~~~~~~~~~~~^^^^^^   
  File "renpy/pyanalysis.py", line 895, in ast_eval_literal
    expr = py_compile(expr, "eval", ast_node=True)
           ~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/python.py", line 1247, in py_compile
    raise e
  File "renpy/python.py", line 1177, in py_compile
    tree = compile(source, filename, py_mode, ast.PyCF_ONLY_AST | flags, True)
           ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "game/screens.rpy", line 299
    25-
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "renpy/bootstrap.py", line 376, in bootstrap
    renpy.main.main()
    ~~~~~~~~~~~~~~~^^
  File "renpy/main.py", line 614, in main
    run(restart)
    ~~~^^^^^^^^^
  File "renpy/main.py", line 137, in run
    renpy.execution.run_context(True)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "renpy/execution.py", line 1022, in run_context
    context.run()
    ~~~~~~~~~~~^^
  File "renpy/common/00start.rpy", line 201, in script
    python:
  File "renpy/common/00start.rpy", line 201, in script
    python:
  File "renpy/display/error.py", line 135, in report_exception
    renpy.game.invoke_in_new_context(
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
        call_exception_screen,
        ^^^^^^^^^^^^^^^^^^^^^^
    ...<4 lines>...
        ignore_action=ignore_action,
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "renpy/game.py", line 301, in invoke_in_new_context
    return callable(*args, **kwargs)
           ~~~~~~~~^^^^^^^^^^^^^^^^^
  File "renpy/display/error.py", line 44, in call_exception_screen
    return renpy.ui.interact(mouse="screen", type="screen", suppress_overlay=True, suppress_underlay=True)
           ~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/ui.py", line 304, in interact
    rv = renpy.game.interface.interact(roll_forward=roll_forward, **kwargs)
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/display/core.py", line 2219, in interact
    repeat, rv = self.interact_core(
                 ~~~~~~~~~~~~~~~~~~^
        preloads=preloads,
        ^^^^^^^^^^^^^^^^^^
    ...<4 lines>...
        **kwargs,
        ^^^^^^^^^
    )  # type: ignore
    ^                
  File "renpy/display/core.py", line 2450, in interact_core
    renpy.display.screen.prepare_screens()
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^
  File "renpy/display/screen.py", line 1035, in prepare_screens
    s.ast.prepare_screen()
    ~~~~~~~~~~~~~~~~~~~~^^
  File "game/screens.rpy", line 283, in prepare_screen
    screen navigation():
  File "game/screens.rpy", line 283, in prepare
    screen navigation():
  File "game/screens.rpy", line 285, in prepare
    vbox:
  File "game/screens.rpy", line 285, in prepare
    vbox:
  File "game/screens.rpy", line 297, in prepare
    if main_menu:
  File "game/screens.rpy", line 297, in prepare
    if main_menu:
  File "game/screens.rpy", line 299, in prepare
    imagebutton auto "gui/button/novo_jogo_%s.png" action Start()  xalign 0.5 yalign 0.5 ypos 25-
  File "game/screens.rpy", line 299, in prepare
    imagebutton auto "gui/button/novo_jogo_%s.png" action Start()  xalign 0.5 yalign 0.5 ypos 25-
  File "renpy/pyanalysis.py", line 913, in ast_eval
    return self.ast_eval_literal(expr)[0]
           ~~~~~~~~~~~~~~~~~~~~~^^^^^^   
  File "renpy/pyanalysis.py", line 895, in ast_eval_literal
    expr = py_compile(expr, "eval", ast_node=True)
           ~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/python.py", line 1247, in py_compile
    raise e
  File "renpy/python.py", line 1177, in py_compile
    tree = compile(source, filename, py_mode, ast.PyCF_ONLY_AST | flags, True)
           ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "game/screens.rpy", line 299
    25-
SyntaxError: invalid syntax

Windows-11-10.0.26100-SP0 AMD64
Ren'Py 8.4.1.25072401
Trilha Mineira 7.0
Mon Jul 28 12:04:24 2025
